# vaultclaw

./: .gitignore  Cargo.toml  README.md  SKILL.md
benches/: vault_ops.rs
docs/: business-plan.md  dogfood.md
docs/adr/: 000-integration-analysis.md  003-agent-tokens.md
mcp/: README.md  package.json  tsconfig.json
mcp/src/: index.ts
mcp/src/__tests__/: server.test.ts
scripts/: auto-dev.sh
src/: lib.rs  main.rs
src/agent/: access_policy.rs  approval.rs  audit.rs  gateway.rs  http.rs  jwt.rs  lease.rs  mod.rs  notify.rs  persist.rs  rate_config.rs  resolve.rs  skill.rs  token.rs
src/backup/: mod.rs
src/browser/: host.rs  mod.rs  native_messaging.rs
src/cli/: clipboard.rs  mod.rs
src/cli/commands/: agent.rs  backup_cmd.rs  browser_cmd.rs  completions_cmd.rs  config_cmd.rs  daemon_cmd.rs  inject_cmd.rs  lease_cmd.rs  mod.rs  passkey_cmd.rs  redact_cmd.rs  run_cmd.rs  scan_cmd.rs  security.rs  sync_cmd.rs  touchid_cmd.rs  vault_cmd.rs  yubikey_cmd.rs
src/config/: mod.rs  vault_ref.rs
src/crypto/: cipher.rs  kdf.rs  keys.rs  mod.rs  recovery.rs
src/daemon/: client.rs  lifecycle.rs  mod.rs  protocol.rs  server.rs
src/import/: onepassword.rs
src/passkey/: keys.rs  mod.rs  tests.rs  webauthn.rs
src/platform/: keychain.rs  mod.rs  touchid.rs  yubikey.rs
src/security/: anonymize.rs  breach.rs  health.rs  llm.rs  mod.rs  redact.rs  report.rs  rotation.rs
src/sync/: file_sync.rs  mod.rs  multi_vault.rs  provider.rs  scheduler.rs  shared_vault.rs  webdav.rs
src/totp/: mod.rs
src/vault/: entry.rs  format.rs  mod.rs  search.rs  sqlite_store.rs  store.rs
tests/: integration.rs
